# find_package(X11 REQUIRED)

# add_library(desk_up_x11_library STATIC)

# target_include_directories(desk_up_x11_library PUBLIC ${CMAKE_SOURCE_DIR}/source/desk_up_window_backend)


# target_include_directories(desk_up_x11_library PUBLIC ${X11_INCLUDE_DIR})
# target_link_libraries(desk_up_x11_library PUBLIC ${X11_LIBRARIES})

# target_include_directories(desk_up_x11_library PUBLIC ${CMAKE_SOURCE_DIR}/source/desk_up_window_backend/windowDesc)
# target_link_libraries(desk_up_x11_library PUBLIC window_desc_library)

# target_sources(desk_up_x11_library PUBLIC ${CMAKE_CURRENT_LIST_DIR}/desk_up_x11.cc ${CMAKE_CURRENT_LIST_DIR}/desk_up_x11.h)
